--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,8 +1,8 @@
 - clean: ['~']
 
 - link:
-     ~/.tint3rc: 
-         path: config/tint3/tint3rc
+     ~/.tint3rc: config/tint3/tint3rc
+     ~/.config/vim: config/vim
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
