GnuPG issues fix + light environment modifications + vim remap + tint3 stuff

--- a/config/sh/config
+++ b/config/sh/config
@@ -9,6 +9,9 @@ cmd_exists()
 	done
 }
 
+# ssh agent
+
+eval $(keychain --eval --quiet)
 # ------------------------------------------------------------------------------
 # FUNCTIONS/ALIASES {{{
 
