Add MPD Configuration

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,7 @@
      ~/.config/sh: config/sh
      ~/.config/systemd: config/systemd
      ~/.config/ranger: config/ranger
+     ~/.config/mpd: config/mpd
      ~/.local/bin: bin
      ~/.local/share/homepage: share/homepage
 - shell:
