--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,6 +3,7 @@
 - link:
      ~/.zshenv: zshenv
      ~/.tint3rc: config/tint3/tint3rc
+     ~/.config/tint3: config/tint3
      ~/.config/vim: config/vim
      ~/.config/bspwm: config/bspwm
      ~/.config/X11: config/X11
@@ -12,7 +13,7 @@
      ~/.config/systemd: config/systemd
      ~/.config/ranger: config/ranger
      ~/.config/mpd: config/mpd
-     ~/.config/lftp: config/lftp
+     ~/.config/lftp: config/lfp
      ~/.local/bin: bin
      ~/.local/share/homepage: share/homepage
 - shell:
