Return VIM to hjkl & alias scrot

--- a/config/sh/config
+++ b/config/sh/config
@@ -26,6 +26,7 @@ alias ll='ls -lh'
 alias mv='mv -i'
 alias ls='ls --color=auto'
 alias vim='vim -u ~/.config/vim/vimrc'
+alias scrot='scrot ~/Pictures/Screenshots/%Y-%m-%d-%T-screenshot.png'
 
 # Application specific aliases:
 cmd_exists ncmpcpp && alias ncmpcpp='ncmpcpp -c ~/.config/ncmpcpp/config'
