--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
      ~/.config/ranger: config/ranger
      ~/.config/mpd: config/mpd
      ~/.config/lftp: config/lfp
+     ~/.config/compton: config/compton
      ~/.local/bin: bin
      ~/.local/share/homepage: share/homepage
 - shell:
