Add alias for moon

--- a/config/sh/config
+++ b/config/sh/config
@@ -28,6 +28,7 @@ alias ls='ls --color=auto'
 alias vim='vim -u ~/.config/vim/vimrc'
 alias scrot='scrot ~/Pictures/Screenshots/%Y-%m-%d-%T-screenshot.png'
 alias wttr='curl wttr.in'
+alias moon='curl wttr.in/Moon'
 
 # Application specific aliases:
 cmd_exists ncmpcpp && alias ncmpcpp='ncmpcpp -c ~/.config/ncmpcpp/config'
