--- a/config/zsh/.gitignore
+++ b/config/zsh/.gitignore
@@ -1,4 +1,8 @@
-.zsh-history 
-.zcompdump--5.2
-.zshrc.pre-oh-my-zsh  
-.zcompdump-lisa-5.2
+# Ignore everyone
+*
+# Except :
+!theme
+!zshenv
+!zshrc
+!plugins
+
