--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,7 @@
      ~/.config/dunst: config/dunst
      ~/.config/compton: config/compton
      ~/.config/git-annex: config/git-annex
+     ~/.ncmpcpp: config/ncmpcpp
      ~/.local/scripts: scripts
      ~/.local/share/homepage: share/homepage
 - shell:
