--- a/config/mpd/mpd.conf
+++ b/config/mpd/mpd.conf
@@ -10,10 +10,17 @@ state_file         "~/.local/share/mpd/state"
 sticker_file       "~/.local/share/mpd/sticker.sql"
 
 # Library
-mixer_type              "software"
+mixer_type         "software"
 
 # Audio Output
 audio_output {
-        type            "pulse"
-        name            "pulse audio"
+    type           "pulse"
+    name           "pulse audio"
+}
+
+audio_output {
+    type           "fifo"
+    name           "mpd"
+    path           "/tmp/mpd.fifo"
+    format         "44100:16:2"
 }
