--- a/config/ncmpcpp/config
+++ b/config/ncmpcpp/config
@@ -1,1 +1,7 @@
 mpd_music_dir = "~/Music"
+visualizer_fifo_path = "/tmp/mpd.fifo"
+visualizer_output_name = "mpd"
+visualizer_sync_interval = "300"
+visualizer_in_stereo = "yes"
+visualizer_type = "spectrum"
+visualizer_look = ".="
