--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,25 +1,22 @@
 - clean: ['~']
 
 - link:
-     ~/.zshenv: config/zsh/zshenv
-     ~/.tint3rc: config/tint3/tint3rc
-     ~/.rtorrent.rc: config/rtorrent/rtorrent.rc
-     ~/.config/tint3: config/tint3
-     ~/.config/vim: config/vim
-     ~/.config/bspwm: config/bspwm
-     ~/.config/X11: config/X11
-     ~/.config/zsh: config/zsh
-     ~/.config/sxhkd: config/sxhkd
-     ~/.config/sh: config/sh
-     ~/.config/systemd: config/systemd
-     ~/.config/ranger: config/ranger
-     ~/.config/mpd: config/mpd
-     ~/.config/lftp: config/lftp
-     ~/.vimperatorrc: config/vimperator/vimperatorrc
-     ~/.config/dunst: config/dunst
-     ~/.config/compton: config/compton
-     ~/.config/git-annex: config/git-annex
-     ~/.ncmpcpp: config/ncmpcpp
-     ~/.local/share/homepage: share/homepage
+     $XDG_CONFIG_HOME/tint3: local/etc/tint3
+     $XDG_CONFIG_HOME/rtorrent/rtorrent.rc: local/etc/rtorrent/rtorrent.rc
+     $XDG_CONFIG_HOME/vim/vimrc: local/etc/vim/vimrc
+     $XDG_CONFIG_HOME/bspwm: local/etc/bspwm
+     $XDG_CONFIG_HOME/X11: local/etc/X11
+     $XDG_CONFIG_HOME/zsh: local/etc/zsh
+     $XDG_CONFIG_HOME/sxhkd: local/etc/sxhkd
+     $XDG_CONFIG_HOME/sh: local/etc/sh
+     $XDG_CONFIG_HOME/systemd: local/etc/systemd
+     $XDG_CONFIG_HOME/ranger/rc.conf: local/etc/ranger/rc.conf
+     $XDG_CONFIG_HOME/mpd/mpd.conf: local/etc/mpd/mpd.conf
+     $XDG_CONFIG_HOME/lftp/rc: local/etc/lftp/rc
+     $XDG_CONFIG_HOME/vimperator/vimperatorrc: local/etc/vimperator/vimperatorrc
+     $XDG_CONFIG_HOME/dunst: local/etc/dunst
+     $XDG_CONFIG_HOME/compton: local/etc/compton
+     $XDG_CONFIG_HOME/ncmpcpp/config: local/etc/ncmpcpp/config
+     ~/.local/share/homepage: local/share/homepage
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
