--- a/config/ncmpcpp/config
+++ b/config/ncmpcpp/config
@@ -3,5 +3,5 @@ visualizer_fifo_path = "/tmp/mpd.fifo"
 visualizer_output_name = "mpd"
 visualizer_sync_interval = "300"
 visualizer_in_stereo = "yes"
-visualizer_type = "spectrum"
+#visualizer_type = "spectrum"
 visualizer_look = ".="
