Customize qutebrowser keybindings (import from old system)

--- a/config/qutebrowser/keys.conf
+++ b/config/qutebrowser/keys.conf
@@ -48,16 +48,18 @@ leave-mode
 
 clear-keychain ;; search ;; fullscreen --leave
     <escape>
-    <ctrl-[>
 
 set-cmd-text -s :open
     o
 
 set-cmd-text :open {url:pretty}
-    go
+    O
 
 set-cmd-text -s :open -t
-    O
+    t
+
+set-cmd-text -s :open -t {url:pretty}
+    T
 
 set-cmd-text :open -t -i {url:pretty}
     gO
@@ -101,7 +103,7 @@ tab-only
     co
 
 tab-focus
-    T
+    X
 
 tab-move
     gm
@@ -135,18 +137,9 @@ back
     H
     <back>
 
-back -t
-    th
-
-back -w
-    wh
-
 forward
     L
     <forward>
-
-forward -t
-    tl
 
 forward -w
     wl
@@ -284,9 +277,6 @@ open -w -- {clipboard}
 open -w -- {primary}
     wP
 
-quickmark-save
-    m
-
 set-cmd-text -s :quickmark-load
     b
 
@@ -295,9 +285,6 @@ set-cmd-text -s :quickmark-load -t
 
 set-cmd-text -s :quickmark-load -w
     wb
-
-bookmark-add
-    M
 
 set-cmd-text -s :bookmark-load
     gb
@@ -451,6 +438,19 @@ record-macro
 
 run-macro
     @
+
+back -w
+    wh
+
+<unbound>
+    th
+    tl
+
+spawn mpv {url}
+    m
+
+hint links spawn mpv {hint-url}
+    M
 
 [insert]
 # Keybindings for insert mode.
