--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
         ~/.config/sh: config/sh
         ~/.config/zsh: config/zsh
         ~/.config/mpd: config/mpd
+        ~/.config/zathura: config/zathura
         ~/.ncmpcpp/config: config/ncmpcpp/config
         ~/.vimperatorrc: config/vimperatorrc
         ~/.zshenv: config/zshenv
