Minors tweaks for qutebrowser, X colors and $VISUAL

--- a/qutebrowser/.config/qutebrowser/qutebrowser.conf
+++ b/qutebrowser/.config/qutebrowser/qutebrowser.conf
@@ -190,7 +190,7 @@ xss-auditing = false
 site-specific-quirks = true
 default-encoding = 
 new-instance-open-target = tab
-new-instance-open-target.window = last-focused
+new-instance-open-target.window = last-opened
 log-javascript-console = debug
 save-session = false
 session-default-name = 
@@ -403,7 +403,7 @@ prompt-filebrowser = true
 do-not-track = true
 accept-language = en-GB,en,fr
 referer-header = same-domain
-user-agent = Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/538.1 (KHTML, like Gecko) qutebrowser/0.10.1 Safari/538.1
+user-agent = 
 proxy = system
 proxy-dns-requests = true
 ssl-strict = ask
