--- a/etc/git/config
+++ b/etc/git/config
@@ -15,6 +15,8 @@
   tool = vimdiff
 [merge]
   tool = vimdiff
+[pull]
+  ff = only
 [user]
   name = Timothée Floure
   email = timothee.floure@fnux.ch
