fnux to rp; acpi-handler removed

--- a/etc/git/config
+++ b/etc/git/config
@@ -18,5 +18,5 @@
 [pull]
   ff = only
 [user]
-  name = Timothée Floure
-  email = timothee.floure@fnux.ch
+  name = Roland Puntaier
+  email = roland.puntaier@gmail.com
