--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,6 @@ etc/xmonad/xmonad.errors
 etc/xmonad/xmonad.hi
 etc/xmonad/xmonad.o
 etc/xmonad/xmonad.template.hs
-etc/zsh/.zcompdump
+etc/zsh/.zcompdump*
 etc/zsh/.zdirs
 etc/zsh/.zgen
