--- a/etc/ranger/rc.conf
+++ b/etc/ranger/rc.conf
@@ -2,4 +2,16 @@
 set preview_images true
 set preview_images_method feh
 set show_hidden true
+
 map DD shell gio trash %s
+
+#as alt+1,... is used for xmonad
+map g1 tab_open 1
+map g2 tab_open 2
+map g3 tab_open 3
+map g4 tab_open 4
+map g5 tab_open 5
+map g6 tab_open 6
+map g7 tab_open 7
+map g8 tab_open 8
+map g9 tab_open 9
