pass, gpg separate

--- a/etc/gnupg/gpg.conf
+++ b/etc/gnupg/gpg.conf
@@ -1,7 +1,7 @@
 # https://www.gnupg.org/documentation/manuals/gnupg/GPG-Options.html#GPG-Options
 # https://security.stackexchange.com/questions/84280/short-openpgp-key-ids-are-insecure-how-to-configure-gnupg-to-use-long-key-ids-i
 
-default-key F85CB631327ED8DCD50C9FD3BC9A552643B86228
+default-key $MYGPG
 no-greeting
 use-agent
 list-options show-uid-validity
