--- a/etc/sh/config
+++ b/etc/sh/config
@@ -1,8 +1,7 @@
 # vim: syntax=zsh
 
+export MYGPG=F85CB631327ED8DCD50C9FD3BC9A552643B86228
 export MYTERM=alacritty
-#export MYTERM=xterm -fa monaco -fs 10 -bg black -fg white
-#export MYTERM=urxvt -fa monaco -fs 10 -bg black -fg white
 
 HISTFILE="${XDG_STATE_HOME:-$HOME}/.sh_history"
 
