fix: weechat config

--- a/etc/weechat/irc.conf
+++ b/etc/weechat/irc.conf
@@ -127,7 +127,7 @@ local_hostname = ""
 msg_kick = ""
 msg_part = "WeeChat ${info:version}"
 msg_quit = "WeeChat ${info:version}"
-nicks = "aaron,aaron1,aaron2,aaron3,aaron4"
+nicks = "rpuntaie,rpuntaie1,rpuntaie2,rpuntaie3,rpuntaie4"
 nicks_alternate = on
 notify = ""
 password = ""
@@ -169,7 +169,7 @@ freenode.sasl_fail
 freenode.autoconnect = on
 freenode.autoreconnect
 freenode.autoreconnect_delay
-freenode.nicks = "eh_eff"
+freenode.nicks = "rpuntaie"
 freenode.nicks_alternate
 freenode.username
 freenode.realname
@@ -177,7 +177,7 @@ freenode.local_hostname
 freenode.usermode
 freenode.command
 freenode.command_delay
-freenode.autojoin = "#reactjs,#postgresql,#vandevops,#openra,#neovim"
+freenode.autojoin = ""
 freenode.autorejoin
 freenode.autorejoin_delay
 freenode.connection_timeout
