--- a/etc/weechat/urlgrab.conf
+++ b/etc/weechat/urlgrab.conf
@@ -26,4 +26,4 @@ method = "local"
 output_main_buffer = off
 remotecmd = "ssh -x localhost -i ~/.ssh/id_rsa -C "export DISPLAY=":0.0" &&  firefox '%s'""
 time_format = "%H:%M:%S"
-url_log = "~/.weechat/urls.log"
+url_log = "%h/urls.log"
