fix: weechat config

--- a/etc/weechat/irc.conf
+++ b/etc/weechat/irc.conf
@@ -146,7 +146,7 @@ ssl_fingerprint = ""
 ssl_priorities = "NORMAL"
 ssl_verify = on
 usermode = ""
-username = "aaron"
+username = "rpuntaie"
 
 [server]
 freenode.addresses = "chat.freenode.net/7000"
