.gnupg/sshcontrol from gpg

--- a/etc/gnupg/gpg.conf
+++ b/etc/gnupg/gpg.conf
@@ -21,3 +21,5 @@ personal-cipher-preferences AES256 AES192 AES CAST5
 s2k-cipher-algo AES256
 s2k-digest-algo SHA512
 cert-digest-algo SHA512
+no-auto-check-trustdb
+#takes too long. When time, manually do: gpg --ckeck-trustdb
